add TypeMappingHandler